[package]
name = "jwt_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.99"
jsonwebkey = "0.3.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
pkcs1 = { version = "0.7.5", features = ["pem", "std"] }
pem = "3.0.4"
log = "0.4.22"
thiserror = "1.0.63"
env_logger = "0.11.5"
rsa = "0.9.6"
